src/test/deca/context/valid/test_class/unit_selection_float.deca
// Description:
//    Unit Test selection 
// Results:
//    none
//
// History:
//    Created on 16/01/2025

class A {
    float x = 3.2;


}

{
    A a = new A();
    println(a.x);
}


