src/test/deca/context/invalid/test_class/selection_private_other_class.deca
// Description:
//    Unit Test selection 
// Results:
//    none
//
// History:
//    Created on 16/01/2025

class A {
    private int x = 10;
}

class B {
    void test() {
        A a = new A();
        println(a.x); // Erreur : x est privé à la classe A
    }
}